--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "*.php",
-      "use": "vercel-php@0.6.0"
-    },
-    { 
-      "src": "*/*.php",
-      "use": "vercel-php@0.6.0" 
+  "functions": {
+    "api/*.php": {
+      "runtime": "vercel-php@0.6.0"
     }
-  ]
+  }
 }
