--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,11 @@
   "builds": [
     {
       "src": "*.php",
-      "use": "vercel-php@0.6.0"
+      "use": "vercel-php"
     },
     {
       "src": "*/*.php",
-      "use": "vercel-php@0.6.0"
+      "use": "vercel-php"
     }
   ]
 }
